--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
   push:
     name: push to registry 
     runs-on: self-hosted
-    needs: [jobs, test]
+    needs: [build, test]
     steps:
       - name: login
         uses: docker/login-action@v3
