--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build and Push Docker Image
     runs-on: self-hosted
+    environment: poros-freepass
     steps:
       - name: Clone Code
         uses: actions/checkout@v3
@@ -55,6 +56,7 @@ jobs:
   test:
     name: test
     runs-on: self-hosted
+    environment: poros-freepass
     needs: build
     steps:
       - name: Clone Code
@@ -88,7 +90,8 @@ jobs:
   push:
     name: push to registry 
     runs-on: self-hosted
-    needs: [build, test]
+    needs: test
+    environment: poros-freepass
     steps:
       - name: login
         uses: docker/login-action@v3
@@ -122,9 +125,11 @@ jobs:
           docker system prune -a -f
 
   deploy:
+  deploy:
     name: Deploy to Server
     runs-on: self-hosted
-    needs: [build, test, push]
+    needs: push
+    environment: poros-freepass
     if: github.ref_name == 'main' 
     steps:
       - name: Deploy via Docker Compose
