--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,48 @@ services:
   mysql:
     image: mysql:8.0
     environment:
-      MYSQL_ROOT_PASSWORD: "password"
-      MYSQL_DATABASE: "taskflow_db"
+      MYSQL_ROOT_PASSWORD: $DB_PASSWORD
+      MYSQL_DATABASE: $DB_NAME
     ports:
       - "3306:3306"
     networks:
       - taskflow_network
+    volumes:
+      - mysql-data:/var/lib/mysql
+      - mysql-conf:/etc/mysql
 
   backend:
     image: ${BACKEND_IMAGE}
     env_file: ./backend/.env
     ports:
       - "3000:3000"
+    volumes:
+      - backend-data:/var/www/html
     depends_on:
       - mysql
+    networks:
+      - taskflow_network
+
+  frontend:
+    image: ${FRONTEND_IMAGE}
+    env_file: ./frontend/.env
+    ports:
+      - "25515:80"
+    volumes:
+      - frontend-data:/var/www/html
+      - nginx-conf:/etc/nginx
+    depends_on:
+      - backend
     networks:
       - taskflow_network
 
 networks:
   taskflow_network:
     driver: bridge
+
+volumes:
+  frontend-data:
+  backend-data:
+  nginx-conf:
+  mysql-data:
+  mysql-conf:
