--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -161,7 +161,7 @@ jobs:
           export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
           export DB_NAME="${{ secrets.DB_NAME }}"
           export DB_PORT="${{ secrets.DB_PORT }}"
-          export BACKEND_PORT="${{ secrets.BACKEND_PORT }}"
+          export BACKEND_PORT="${{ secrets.PORT }}"
           export FRONTEND_PORT="${{ secrets.FRONTEND_PORT }}"
           docker --context remote-client compose down
           docker --context remote-client compose up -d
