--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,13 @@ services:
 
   backend:
     image: ${BACKEND_IMAGE}
-    env_file: ./backend/.env
+    environment:
+      - PORT=3000
+      - DATABASE_URL=${DATABASE_URL}
+      - DB_HOST=database
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
     ports:
       - "3000:3000"
     volumes:
