--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       MYSQL_ROOT_PASSWORD: $DB_PASSWORD
       MYSQL_DATABASE: $DB_NAME
     ports:
-      - "3306:3306"
+      - "${DB_PORT}:3306"
     networks:
       - taskflow_network
     volumes:
@@ -20,10 +20,11 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - DB_HOST=database
       - DB_USER=${DB_USER}
+      - DB_PORT=${DB_PORT}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_NAME=${DB_NAME}
     ports:
-      - "3000:3000"
+      - "${PORT}:3000"
     volumes:
       - backend-data:/var/www/html
     depends_on:
@@ -33,9 +34,8 @@ services:
 
   frontend:
     image: ${FRONTEND_IMAGE}
-    env_file: ./frontend/.env
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT}:80"
     volumes:
       - frontend-data:/var/www/html
       - nginx-conf:/etc/nginx
