--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
 
   frontend:
     image: ${FRONTEND_IMAGE}
+    environment:
+      - VITE_API_URL=${VITE_API_URL}
     ports:
       - "${FRONTEND_PORT}:80"
     # volumes:
