--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,7 @@ jobs:
           push: false
           load: true
           tags: ${{ secrets.BACKEND_IMAGE_TAG }}
+          no-cache: true
           provenance: false
           sbom: false
 
@@ -55,6 +56,7 @@ jobs:
           tags: ${{ secrets.FRONTEND_IMAGE_TAG }}
           build-args: |
             VITE_API_URL=${{ secrets.VITE_API_URL }}
+          no-cache: true
           provenance: false
           sbom: false
 
@@ -131,6 +133,7 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: ${{ secrets.BACKEND_IMAGE_TAG }}
+          no-cache: true
           provenance: false
           sbom: false
 
@@ -141,6 +144,7 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: ${{ secrets.FRONTEND_IMAGE_TAG }}
+          no-cache: true
           provenance: false
           sbom: false
       
@@ -178,6 +182,7 @@ jobs:
           export DB_HOST="${{ secrets.DB_HOST }}"
           export FRONTEND_PORT="${{ secrets.FRONTEND_PORT }}"
           
+          docker --context remote-client compose pull
           docker --context remote-client compose up -d
           
       - name: Failure Cleanup
