--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
 
   backend:
     image: ${BACKEND_IMAGE}
+    pull_policy: always
     environment:
       - PORT=3000
       - DATABASE_URL=${DATABASE_URL}
@@ -34,6 +35,7 @@ services:
 
   frontend:
     image: ${FRONTEND_IMAGE}
+    pull_policy: always
     environment:
       - VITE_API_URL=${VITE_API_URL}
     ports:
