--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -181,7 +181,10 @@ jobs:
           export PORT="${{ secrets.PORT }}"
           export DB_HOST="${{ secrets.DB_HOST }}"
           export FRONTEND_PORT="${{ secrets.FRONTEND_PORT }}"
-          
+
+          #makesure api url
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> /home/.env
+
           docker --context remote-client compose pull
           docker --context remote-client compose up -d
           
